--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                             <input type="text" placeholder="Add Calories" id="item-calories">
                             <label for="item-calories">Calories</label>
                         </div>
-                        <button class="add-btd btn blue darken-3"><i class="fa fa-plus"></i> Add Meal
+                        <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i> Add Meal
                         </button>
                         <!--
-                        <button class="update-btd btn orange"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
-                        <button class="delete-btd btn red"><i class="fa fa-remove"></i> Delete Meal</button>
+                        <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
+                        <button class="delete-btn btn red"><i class="fa fa-remove"></i> Delete Meal</button>
                         -->
                         <button class="back-btd btn grey pull-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                     </div>
